# wjrpc

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Readme.md  _readme_8md.html  annotated.html  basic__types_8hpp.html  basic__types_8hpp_source.html  classes.html  classwjrpc_1_1engine-members.html  classwjrpc_1_1engine.html  classwjrpc_1_1handler-members.html  classwjrpc_1_1handler.html  classwjrpc_1_1incoming__holder-members.html  classwjrpc_1_1incoming__holder.html  classwjrpc_1_1method__list-members.html  classwjrpc_1_1method__list.html  classwjrpc_1_1method__list__base-members.html  classwjrpc_1_1method__list__base.html  dir_040de5d4e7da0689bee1fa11d3c4fd6f.html  dir_1c95ced615485681e60e69e2b1fb26b3.html  dir_3c857bfb4bea73e5b57380c24af75ec8.html  dir_3c90cd26cd0cb42b84d20392c2a88637.html  dir_6aad2548987633fd2f7e7dd9cb171fa2.html  dir_baeb9d70b936dd5a3b248c89bca85909.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_e7370ef1614406aebc5147d295c80b48.html  engine_8hpp.html  engine_8hpp_source.html  engine__options_8hpp.html  engine__options_8hpp_source.html  example01_8cpp-example.html  example01_8cpp.html  example02_8cpp-example.html  example02_8cpp.html  examples.html  (+54 more)
.ci/: automr.sh  build-and-test.sh  cppcheck-exec.sh  cppcheck.sh  suppressions.txt
.ci/orig/: .gitlab-ci.yml.orig  .travis.yml.orig  Makefile.orig
.cppcheck/: suppressions.txt
.github/: build_history.txt
cmake/: AUX.cmake  ConfigureLibrary.cmake  ci.cmake  mambaopt.cmake  mambaru.cmake
cov-report/: index-sort-f.html  index-sort-l.html  index.html
cov-report/tests/: engine_suite.cpp.func-sort-c.html  engine_suite.cpp.func.html  engine_suite.cpp.gcov.html  handler_suite.cpp.func-sort-c.html  handler_suite.cpp.func.html  handler_suite.cpp.gcov.html  incoming_suite.cpp.func-sort-c.html  incoming_suite.cpp.func.html  incoming_suite.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  method_suite.cpp.func-sort-c.html  method_suite.cpp.func.html  method_suite.cpp.gcov.html  outgoing_suite.cpp.func-sort-c.html  outgoing_suite.cpp.func.html  outgoing_suite.cpp.gcov.html  req.hpp.func-sort-c.html  req.hpp.func.html  req.hpp.gcov.html  test_jsonrpc.cpp.func-sort-c.html  test_jsonrpc.cpp.func.html  test_jsonrpc.cpp.gcov.html
cov-report/wjrpc/: index-sort-f.html  index-sort-l.html  index.html  memory.hpp.func-sort-c.html  memory.hpp.func.html  memory.hpp.gcov.html
cov-report/wjrpc/engine/: call_map.cpp.func-sort-c.html  call_map.cpp.func.html  call_map.cpp.gcov.html  call_map.hpp.func-sort-c.html  call_map.hpp.func.html  call_map.hpp.gcov.html  engine.hpp.func-sort-c.html  engine.hpp.func.html  engine.hpp.gcov.html  engine_options.hpp.func-sort-c.html  engine_options.hpp.func.html  engine_options.hpp.gcov.html  handler_map.hpp.func-sort-c.html  handler_map.hpp.func.html  handler_map.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
cov-report/wjrpc/errors/: error_json.hpp.func-sort-c.html  error_json.hpp.func.html  error_json.hpp.gcov.html  errors.hpp.func-sort-c.html  errors.hpp.func.html  errors.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
cov-report/wjrpc/handler/: handler.hpp.func-sort-c.html  handler.hpp.func.html  handler.hpp.gcov.html  handler_base_options.hpp.func-sort-c.html  handler_base_options.hpp.func.html  handler_base_options.hpp.gcov.html  handler_options.hpp.func-sort-c.html  handler_options.hpp.func.html  handler_options.hpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html  method_list.hpp.func-sort-c.html  method_list.hpp.func.html  method_list.hpp.gcov.html  method_list_base.hpp.func-sort-c.html  method_list_base.hpp.func.html  method_list_base.hpp.gcov.html
cov-report/wjrpc/incoming/: incoming.hpp.func-sort-c.html  incoming.hpp.func.html  incoming.hpp.gcov.html  incoming_holder.cpp.func-sort-c.html  incoming_holder.cpp.func.html  incoming_holder.cpp.gcov.html  incoming_holder.hpp.func-sort-c.html  incoming_holder.hpp.func.html  index-sort-f.html  (+9 more)
examples/: CMakeLists.txt  calc_proxy.cpp  example01.cpp  example02.cpp  example03.cpp  example1.cpp  example10.cpp  example11.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp  example9.cpp  exampleN.cpp  gateway.hpp
examples/calc/: calc1.cpp  calc1.hpp  calc_p.cpp  calc_p.hpp  gateway.hpp  icalc.hpp  iclac.hpp  pclient.cpp  pclient.hpp  pserver.cpp  pserver.hpp  service.hpp  types.hpp
examples/calc/api/: divides.hpp  divides_json.hpp  minus.hpp  minus_json.hpp  multiplies.hpp  multiplies_json.hpp  plus.hpp  plus_json.hpp
iow/jsonrpc/: logger.hpp
iow/logger/: logger.hpp
iow/workflow/: workflow.cpp
tests/: CMakeLists.txt  benchmark.cpp  engine_suite.cpp  handler_suite.cpp  incoming_suite.cpp  memcheck.sh  method_suite.cpp  outgoing_suite.cpp  req.hpp  test_jsonrpc.cpp
wjrpc/: basic_types.hpp  engine.hpp  errors.hpp  handler.hpp  logger.hpp  memory.hpp  method.hpp  noparams.hpp  noparams_json.hpp  types.hpp  version.hpp  wjrpc.hpp
wjrpc/engine/: call_map.cpp  call_map.hpp  engine.hpp  engine_options.hpp  engine_options_json.hpp  handler_map.hpp
wjrpc/errors/: error_json.hpp  errors.hpp
wjrpc/handler/: aspect.hpp  aspect_handler.hpp  basic_method_list.hpp  handler.hpp  handler_base_options.hpp  handler_options.hpp  handler_types.hpp  method_list.hpp  method_list_base.hpp
wjrpc/incoming/: incoming.hpp  incoming_holder.cpp  incoming_holder.hpp  incoming_json.hpp  send_error.cpp  send_error.hpp
wjrpc/jsonrpc/: basic_types.hpp  logger.hpp  noparams_json.hpp
wjrpc/logger/: logger.hpp
wjrpc/method/: aspect_method.hpp  basic_method.hpp  default_schema.hpp  jsonrpc_tag.hpp  mem_fun.hpp  method.hpp  method_base.hpp  method_group.hpp
wjrpc/outgoing/: outgoing.hpp  outgoing_error.hpp  outgoing_error_json.hpp  outgoing_holder.cpp  outgoing_holder.hpp  outgoing_notify.hpp  outgoing_notify_json.hpp  outgoing_request.hpp  outgoing_request_json.hpp  outgoing_result.hpp  outgoing_result_json.hpp  version_member.hpp
wjrpc/workflow/: workflow.cpp  workflow_options_json.hpp
(+230 files in other folders)
